# parakeet-realtime-server

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: mic-streaming.html
examples/web-app/: index.html  package.json  tsconfig.json
examples/web-app/public/: pcm-worklet.js
examples/web-app/src/: App.tsx  config.ts  index.css  types.ts
examples/web-app/src/audio/: pcmStream.ts
examples/web-app/src/components/: Controls.tsx  ErrorBanner.tsx  EventLogPanel.tsx  HealthBadge.tsx  TranscriptPanel.tsx
examples/web-app/src/hooks/: useHealth.ts  useMicDevices.ts  useStreamRecorder.ts
scripts/: build.ps1  download-models.ps1  fetch-cuda-deps.ps1  release.ps1
src/: main.rs
