[package]
name = "parakeet-realtime-server"
version = "0.1.0"
edition = "2021"

[dependencies]
parakeet-rs = { git = "https://github.com/altunenes/parakeet-rs.git", features = ["cuda", "load-dynamic"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3"
bytes = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
